--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   intl: ^0.19.0
   flutter_barcode_scanner: ^2.0.0
   image_picker: ^1.0.7
+  fluttertoast: ^8.2.4
+  firebase_messaging: ^14.7.15
+  flutter_local_notifications: ^16.3.2
 
 dev_dependencies:
   flutter_test:
@@ -73,7 +76,9 @@ flutter:
     - assets/customer.png
     - assets/document.png
     - assets/rapport.png
- 
+    - assets/stock.png
+    - assets/user.jpg
+    - assets/syring.jpg
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
